[gd_scene load_steps=3 format=3 uid="uid://b8syihwfdmq7i"]

[ext_resource type="Script" path="res://UI/death_menu/death_menu.gd" id="1_a6c42"]
[ext_resource type="AudioStream" uid="uid://c20bmh0a5j5yh" path="res://audio/350984__cabled_mess__lose_c_03.wav" id="2_pctqo"]

[node name="death_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a6c42")

[node name="lose" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_pctqo")
autoplay = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1155.0
offset_bottom = 654.0
scale = Vector2(1.66903, 1.55652)
color = Color(0.337255, 0.337255, 0.337255, 0.835294)

[node name="death_label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 176.749
offset_top = 7.06705
offset_right = 909.749
offset_bottom = 242.067
theme_override_colors/font_color = Color(0.341176, 0, 0, 1)
theme_override_font_sizes/font_size = 130
text = "Game Over!
"

[node name="score_label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 230.673
offset_top = 214.581
offset_right = 606.673
offset_bottom = 354.581
theme_override_font_sizes/font_size = 100
text = "Score:"

[node name="restart" type="Button" parent="ColorRect"]
process_mode = 3
layout_mode = 0
offset_left = 662.045
offset_top = 444.581
offset_right = 1110.04
offset_bottom = 589.581
theme_override_font_sizes/font_size = 100
text = " Restart"

[node name="quit" type="Button" parent="ColorRect" groups=["death_menu"]]
process_mode = 3
layout_mode = 0
offset_left = 109.045
offset_top = 444.581
offset_right = 378.045
offset_bottom = 589.581
theme_override_font_sizes/font_size = 100
text = " Quit "

[connection signal="pressed" from="ColorRect/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="ColorRect/quit" to="." method="_on_quit_pressed"]
